# macedon

./: .coveragerc  .editorconfig  .env.dist  .gitignore  .gitmessage  CHANGES.rst  LICENSE  Makefile  README.md  example.http  pydeps.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.cfg  setup.py
.github/workflows/: run-tests.yml
PROJECT_NAME/: __main__.py  app.py
docs/: changes.rst  conf.py  index.rst  license.rst
docs/_static/: custom-furo.css  custom.css  custom.js
docs/_templates/: layout.html
macedon/: __init__.py  __main__.py  _common.py  _version.py  entrypoint.py  fileparser.py  io.py  logger.py  options.py  printer.py  printer2.py  requester.py  synchronizer.py  worker.py
pytermor/: text.py
scripts/: update-readme-usage.sh
tests/: __init__.py  __main__.py  fixtures.py  test_options.py
