[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
testpaths = [
    "macedon",
    "tests",
]
addopts = [
    "-p", "no:doctest",
    "--strict-config",
    "--strict-markers",
    "--maxfail", "5",
]
xfail_strict = true
markers = []
