[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macedon"
dynamic = ["version"]
description = "CLI web service availability verifier"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
platforms = ["linux"]
keywords = [
    "cli", "terminal", "console", "web",
    "web-service", "check", "healthcheck",
    "request", "http", "https", "socks",
]
authors = [
    { name = "Aleksandr Shavykin", email = "0.delameter@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Terminals",
]
dependencies = [
    "click~=8.1.3",
    "es7s-commons~=1.3.1",
    "psutil~=5.9.4",
    "pytermor~=2.106.6.dev0",
    "requests~=2.28.2",
]

[project.optional-dependencies]
socks = [
    "requests[socks]",
]

[project.scripts]
macedon = "macedon.__main__:main"

[project.urls]
Homepage = "https://github.com/es7s/macedon"

# ---------------------------------------------------------
# build

[tool.hatch.publish.index]
disable = false

[tool.hatch.build.targets.sdist]
include = [
    "/macedon",
    "/tests",
]

[tool.hatch.version]
path = "macedon/_version.py"

# ---------------------------------------------------------
# lint, pytest

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = [
    "macedon",
    "tests",
]
addopts = [
    "-p", "no:doctest",
    "--strict-config",
    "--strict-markers",
    "--maxfail", "5",
]
xfail_strict = true
markers = []

# ---------------------------------------------------------
# coverage

[tool.coverage.run]
source = ["macedon"]
branch = true
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "*/_version.py",
]
dynamic_context = "test_function"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.coverage.html]
directory = "misc/coverage"
title = "macedon coverage report"
