[metadata]
name = *PROJECT_NAME
version = 0.0.0
author = Aleksandr Shavykin
author_email = 0.delameter@gmail.com
description = *PROJECT_DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/*PROJECT_URL
project_urls =
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
packages = find:


[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    *PROJECT_NAME = *PROJECT_NAME.__main__:main
