[metadata]
name = macedon
version = 0.9.11
author = Aleksandr Shavykin
author_email = 0.delameter@gmail.com
description = CLI web service availability verifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/es7s/macedon
project_urls =
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
install_requires =
    click
    requests
    psutil
;    pytermor   ; bundled (for now)
;    es7s   ; bundled (for now)
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    macedon = macedon.__main__:main
